Landing page PC version

--- a/src/components/PowerpickCard/index.module.scss
+++ b/src/components/PowerpickCard/index.module.scss
@@ -2,7 +2,7 @@
 
 .card_wrapper {
   padding: 22px;
-  border: 2px solid $black;
+  border: 2px solid #000;
   border-radius: 14px;
   background-color: $black2;
   display: flex;
