--- a/src/pages/LandingPage/index.module.scss
+++ b/src/pages/LandingPage/index.module.scss
@@ -149,7 +149,10 @@
     align-items: center;
     height: 140px;
     width: 100%;
-    background-image: linear-gradient(to bottom, #17181b, #000000);
+    // background-image: linear-gradient(to bottom, #17181b, #000000);
+    background-image: url("../../assets/rectangle.png");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 
     .news_alert_form {
       display: flex;
@@ -398,7 +401,8 @@
       height: auto;
       padding: 20px;
       width: 100%;
-      background-image: linear-gradient(to bottom, #17181b, #000000);
+      // background-image: linear-gradient(to bottom, #17181b, #000000);
+      background-image: url("../../assets/rectangle.png");
       border-radius: 12px;
 
       .news_alert_form {
