--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -3,11 +3,14 @@ $black: #111111;
 $darkblack: #000;
 $lightBlack: #202124;
 $lightBlack2: #3b3c3e;
+$lightBlack3: #2b2b2b;
 $lightGrey: #303133;
 $black2: #17181a;
 $white: #fff;
 $grey: #979797;
 $grey2: #f2f2f2;
+$grey3: #a9a9a9;
+$grey4: #1a1a1a;
 $lightGreen: #1bbc8633;
 $alertPrimary: #fb6e0026;
 $alertSuccess: #1bbc8626;
