--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -6,11 +6,14 @@ $lightBlack2: #3b3c3e;
 $lightBlack3: #2b2b2b;
 $lightGrey: #303133;
 $black2: #17181a;
+$black3: rgba(17, 17, 17, 0.8);
 $white: #fff;
 $grey: #979797;
 $grey2: #f2f2f2;
 $grey3: #a9a9a9;
 $grey4: #1a1a1a;
+$grey5: rgba(242, 242, 242, 0.08);
+$grey6: rgba(242, 242, 242, 0.6);
 $lightGreen: #1bbc8633;
 $alertPrimary: #fb6e0026;
 $alertSuccess: #1bbc8626;
