--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,9 +1,13 @@
 $primary: #fb6e00;
+$lightPrimary: #fb6e001a;
+$primaryLight: #fb6e0033;
+$primaryLight2: rgba(251, 110, 0, 0.6);
 $black: #111111;
 $darkblack: #000;
 $lightBlack: #202124;
 $lightBlack2: #3b3c3e;
 $lightBlack3: #2b2b2b;
+$lightBlack4: #232529;
 $lightGrey: #303133;
 $black2: #17181a;
 $black3: rgba(17, 17, 17, 0.8);
@@ -20,9 +24,7 @@ $alertSuccess: #1bbc8626;
 $alertDanger: #e7304e26;
 $danger: #e7304e;
 $success: #1bbc86;
-$primaryLight: #fb6e0033;
 $green: #4bb654;
 $yellow: #fbbc15;
 $orangeRed: #f44336;
 $offwhite: #e0e0e0;
-$lightPrimary: #fb6e001a;
