Account page Results Tab

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -16,8 +16,10 @@ $grey: #979797;
 $grey2: #f2f2f2;
 $grey3: #a9a9a9;
 $grey4: #1a1a1a;
-$grey5: rgba(242, 242, 242, 0.08);
-$grey6: rgba(242, 242, 242, 0.6);
+$grey5: #f2f2f214;
+$grey6: #f2f2f299;
+$grey7: #4d5255;
+$grey8: #3e4345;
 $lightGreen: #1bbc8633;
 $alertPrimary: #fb6e0026;
 $alertSuccess: #1bbc8626;
