--- a/src/components/Accordian/index.module.scss
+++ b/src/components/Accordian/index.module.scss
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   font-size: 16px;
+  position: relative;
+  margin: 20px 0;
 
   .accoridan_bar {
     background-color: $grey4;
@@ -11,6 +13,10 @@
     display: inherit;
     justify-content: space-between;
     align-items: center;
+
+    &:hover {
+      cursor: pointer;
+    }
 
     .accoridan_bar_right {
       color: $primary;
@@ -40,10 +46,69 @@
 }
 
 .table_wrapper {
-  background-color: $black;
-  width: 90%;
-  left: -70px;
-  right: -70px;
-  margin: 70px auto;
-  // position: absolute;
+  width: 112%;
+  transform: translate(-5%, 0);
+  margin: 30px 0;
+  border-radius: 6px;
+  pointer-events: none;
+  background-color: turquoise;
+
+  .row {
+    display: flex;
+    width: 90%;
+    padding: 20px 0;
+    justify-content: space-between;
+    margin: 0 auto;
+    color: $primary;
+    border-bottom: 1px solid $grey8;
+    align-items: center;
+
+    &:last-child {
+      border-bottom: none;
+    }
+
+    > div {
+      flex: 1;
+
+      &:nth-child(1),
+      &:nth-child(2),
+      &:nth-child(6) {
+        flex: 0.6;
+      }
+
+      &:last-child {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex: 0.8;
+      }
+
+      button {
+        background-color: $white;
+        color: $black;
+        border: none;
+        outline: none;
+        padding: 7px 10px;
+        box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.28);
+        font-size: 16px;
+        border-radius: 12px;
+      }
+    }
+  }
+
+  .table_header {
+    background-color: $grey7;
+    width: 100%;
+    font-weight: 600;
+    border-radius: 6px 6px 0 0;
+
+    > div {
+      color: $white;
+    }
+  }
+
+  .table_body {
+    background-color: $black;
+    border-radius: 0 0 6px 6px;
+  }
 }
