--- a/src/components/Input/index.module.scss
+++ b/src/components/Input/index.module.scss
@@ -10,10 +10,17 @@
     margin: 6px 0 0 0;
   }
 
+  .border {
+    border: 2px solid $offwhite;
+    border-radius: 6px;
+  }
+
   input {
     height: 57px;
-    border: 1px solid $offwhite;
+    border: none;
     background-color: $grey2;
+    padding: 0 10px;
+    outline: none;
   }
 
   .block {
@@ -22,5 +29,41 @@
 
   .rounded {
     border-radius: 7px;
+  }
+
+  .white {
+    background-color: $white;
+  }
+
+  .input_main {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    border-radius: 6px;
+
+    .input {
+      padding: 0 5px;
+      font-size: 16px;
+      width: 100%;
+    }
+
+    .input_icon {
+      background-color: $lightGrey1;
+      height: 57px;
+      padding: 0 16px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 6px 0 0 6px;
+    }
+
+    .input_radius {
+      border-radius: 0 6px 6px 0;
+      &:focus,
+      &:active {
+        outline: none;
+      }
+    }
   }
 }
