--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -9,6 +9,8 @@ $lightBlack2: #3b3c3e;
 $lightBlack3: #2b2b2b;
 $lightBlack4: #232529;
 $lightGrey: #303133;
+$lightGrey1: #d8d8d8;
+$lightGrey2: #c7cad1;
 $black2: #17181a;
 $black3: rgba(17, 17, 17, 0.8);
 $white: #fff;
@@ -20,6 +22,7 @@ $grey5: #f2f2f214;
 $grey6: #f2f2f299;
 $grey7: #4d5255;
 $grey8: #3e4345;
+$grey9: #7f7f7f;
 $lightGreen: #1bbc8633;
 $alertPrimary: #fb6e0026;
 $alertSuccess: #1bbc8626;
