--- a/src/components/BalanceInfoComponent/index.module.scss
+++ b/src/components/BalanceInfoComponent/index.module.scss
@@ -43,7 +43,7 @@ p {
       button {
         width: 190px;
         height: 48px;
-        box-shadow: 0 0px 6px 0.5px $primary;
+        box-shadow: 0 3px 27px -2px $primaryLight3;
       }
     }
   }
@@ -235,5 +235,213 @@ p {
   }
   .select {
     background-color: $white !important;
+  }
+}
+
+@media (max-width: 540px) {
+  .list_header_wrapper {
+    display: flex;
+    flex-direction: column;
+
+    .list_container {
+      display: flex;
+      flex-direction: column;
+      border-bottom: none;
+      padding: 0;
+      margin-bottom: 30px;
+
+      .list_left_side {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        margin: 10px 0;
+
+        .span {
+          margin: 0 35px;
+          font-weight: bold;
+          font-size: 26px;
+          color: $primary;
+        }
+      }
+
+      .list_right_side {
+        display: inherit;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 10px 0;
+
+        span {
+          font-size: 14px;
+          margin-top: 10px;
+        }
+
+        button {
+          width: 100%;
+          height: 41px;
+        }
+      }
+    }
+
+    .list_container:last-child {
+      border-bottom: none;
+    }
+  }
+
+  .list_left_side_1 {
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    color: $grey3;
+
+    span {
+      margin: 0 8px;
+    }
+  }
+
+  .list_body {
+    margin: 60px 0;
+
+    .list_item {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+
+  .modal_container {
+    background-color: $white;
+    border-radius: 6px;
+    width: 90%;
+    overflow: visible !important;
+    max-height: 100vh - 13vh;
+    margin-top: 15px;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    .modal_header {
+      display: flex;
+      color: $primary;
+      background-color: $white;
+      align-items: flex-end;
+      justify-content: flex-end;
+      position: absolute;
+      width: 90%;
+
+      p {
+        display: none;
+      }
+
+      .modal_close_icon {
+        position: absolute;
+        opacity: 1;
+        display: flex;
+        align-items: flex-end;
+        transform: translateY(30px);
+
+        &:before,
+        &:after {
+          background-color: $darkblack;
+        }
+      }
+    }
+
+    .modal_body {
+      color: $black;
+      padding: 10px 30px;
+      margin-top: 20px;
+
+      .hidden {
+        display: none;
+      }
+
+      .body_header {
+        font-size: 14px;
+        font-weight: bold;
+        color: $grey9;
+      }
+
+      .body_header_primary {
+        color: $primary;
+      }
+
+      .margin_l_40 {
+        margin-left: 0px;
+      }
+
+      .margin_t_10 {
+        margin-top: 10px;
+      }
+
+      label {
+        font-weight: 14px;
+        color: $darkblack;
+
+        span {
+          font-style: italic;
+          font-weight: bold;
+        }
+      }
+
+      .form_amountInput {
+        > div {
+          width: 55%;
+        }
+      }
+
+      .form_Input_50 {
+        display: inline-flex;
+        flex-direction: column;
+        width: 100%;
+      }
+
+      .form_control_center {
+        justify-content: center;
+        align-items: center;
+      }
+
+      .form_control {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+
+        .form_dropdown_main {
+          display: flex;
+          flex-direction: column;
+        }
+        .form_dropdown {
+          border: 2px solid $offwhite;
+          padding: 15px 20px;
+          background-color: $white;
+          border-radius: 6px;
+          appearance: none;
+          background: url("../../assets/down-arrow.png") $white no-repeat 95.5%;
+          background-size: 17px;
+          min-width: 100%;
+          // max-width: 340px;
+          outline: none;
+        }
+
+        .button {
+          width: 100%;
+          transform: translateY(70%);
+          position: relative;
+          justify-content: center;
+          align-items: center;
+          display: flex;
+
+          button {
+            width: 100%;
+            height: 52px;
+          }
+        }
+      }
+    }
+    .select {
+      background-color: $white !important;
+    }
   }
 }
